; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v8_0.c_gfx_v8_0_is_idle.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v8_0.c_gfx_v8_0_is_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32 }

@mmGRBM_STATUS = common dso_local global i32 0, align 4
@GRBM_STATUS = common dso_local global i32 0, align 4
@GUI_ACTIVE = common dso_local global i32 0, align 4
@mmGRBM_STATUS2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @gfx_v8_0_is_idle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gfx_v8_0_is_idle(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.amdgpu_device*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = bitcast i8* %5 to %struct.amdgpu_device*
  store %struct.amdgpu_device* %6, %struct.amdgpu_device** %4, align 8
  %7 = load i32, i32* @mmGRBM_STATUS, align 4
  %8 = call i32 @RREG32(i32 %7)
  %9 = load i32, i32* @GRBM_STATUS, align 4
  %10 = load i32, i32* @GUI_ACTIVE, align 4
  %11 = call i64 @REG_GET_FIELD(i32 %8, i32 %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %1
  %14 = load i32, i32* @mmGRBM_STATUS2, align 4
  %15 = call i32 @RREG32(i32 %14)
  %16 = icmp ne i32 %15, 8
  br i1 %16, label %17, label %18

17:                                               ; preds = %13, %1
  store i32 0, i32* %2, align 4
  br label %19

18:                                               ; preds = %13
  store i32 1, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %17
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @REG_GET_FIELD(i32, i32, i32) #1

declare dso_local i32 @RREG32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
